[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FinamPy"
version = "2026.04.01"
description = "Библиотека-обертка, которая позволяет работать с Finam Trade API брокера Финам из Python"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  {name = "Чечет Игорь Александрович"}
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
  "keyring>=25.7.0",
  "grpcio>=1.78.0",
  "protobuf>=6.33.5",
  "googleapis-common-protos>=1.72.0",
  "types-protobuf>=6.32.1.20251210"
]

[project.urls]
Homepage = "https://github.com/cia76/FinamPy"
Repository = "https://github.com/cia76/FinamPy"

[tool.setuptools]
packages = ["FinamPy"]

[tool.setuptools.package-data]
"FinamPy" = ["grpc/*"]
